@@ -1,3 +1,7 @@
 * Thu Jan 22 2015
 
     Initial public release.
+
+* Tue Feb 3 2015
+
+    Convert user supplied secret into 128-bit long binary key
